--- a/src/app/features/shop/special-item-shop/special-item-shop.component.html
+++ b/src/app/features/shop/special-item-shop/special-item-shop.component.html
@@ -1,36 +1,67 @@
 <p-toast />
 <div class="card card-custom">
-    <div class="row no-gutters">
-        <div class="col-md-3 img-container">
-            <img src="../../../../assets/images/data-test/{{items[5].image[0].value}}" alt="Placeholder Image" height="200">
-        </div>
-        <div class="col-md-9 d-flex align-items-center mt-3">
-            <div>
-                <p style="font-family: 'Roboto';">{{items[5].name}}</p>
-                <p style="font-family: 'Roboto';">Mô tả: {{items[5].des}}</p>
-                <div class="d-flex">
-                    <p style="font-family: 'Roboto';">Màu sắc:</p>
-                    <div class="d-flex ms-3" *ngFor="let color of items[5].color">
-                        <div class="me-3" style="width: 24px; height: 24px; border-radius: 50%; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);" [style.backgroundColor]="color.value"></div>
-                      </div>                                         
-                </div>
-                <div class="d-flex align-items-center pb-2 mb-1" style="font-family: 'Roboto';">
-                    <button (click)="handleCartBtnClicked()" type="button" data-mdb-button-init data-mdb-ripple-init
-                        class="btn btn-dark btn-add-to-cart"
-                        >
-                        Thêm vào giỏ hàng
-                    </button>
-                    <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-dark ms-3">Mua
-                        ngay</button>
-                </div>
-            </div>
-        </div>
+  <!-- <div class="row no-gutters">
+    <div class="col-md-3 img-container">
+      <img
+        src="../../../../assets/images/data-test/{{ items[5].image[0].value }}"
+        alt="Placeholder Image"
+        height="200"
+      />
     </div>
-    <img src="../../../../assets/images/bestseller.png" alt="" width="150" style="position: absolute;right: 0;transform: rotate(45deg);">
+    <div class="col-md-9 d-flex align-items-center mt-3">
+      <div>
+        <p style="font-family: 'Roboto'">{{ items[5].name }}</p>
+        <p style="font-family: 'Roboto'">Mô tả: {{ items[5].des }}</p>
+        <div class="d-flex">
+          <p style="font-family: 'Roboto'">Màu sắc:</p>
+          <div class="d-flex ms-3" *ngFor="let color of items[5].color">
+            <div
+              class="me-3"
+              style="
+                width: 24px;
+                height: 24px;
+                border-radius: 50%;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+              "
+              [style.backgroundColor]="color.value"
+            ></div>
+          </div>
+        </div>
+        <div
+          class="d-flex align-items-center pb-2 mb-1"
+          style="font-family: 'Roboto'"
+        >
+          <button
+            (click)="handleCartBtnClicked()"
+            type="button"
+            data-mdb-button-init
+            data-mdb-ripple-init
+            class="btn btn-dark btn-add-to-cart"
+          >
+            Thêm vào giỏ hàng
+          </button>
+          <button
+            type="button"
+            data-mdb-button-init
+            data-mdb-ripple-init
+            class="btn btn-dark ms-3"
+          >
+            Mua ngay
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <img
+    src="../../../../assets/images/bestseller.png"
+    alt=""
+    width="150"
+    style="position: absolute; right: 0; transform: rotate(45deg)"
+  /> -->
 
-    <!-- TEST HIỂN THỊ NGAY SAU KHI NHẤN THÊM VÀO GIỎ HÀNG -->
+  <!-- TEST HIỂN THỊ NGAY SAU KHI NHẤN THÊM VÀO GIỎ HÀNG -->
 
-    <!-- <div>
+  <!-- <div>
         <h2>Giỏ hàng</h2>
         <div *ngIf="cart && cart.items">
           <ul>
@@ -45,6 +76,12 @@
           <p>Giỏ hàng trống!</p>
         </div>
       </div> -->
-      
-      <!-- TEST HIỂN THỊ NGAY SAU KHI NHẤN THÊM VÀO GIỎ HÀNG -->
+
+  <!-- TEST HIỂN THỊ NGAY SAU KHI NHẤN THÊM VÀO GIỎ HÀNG -->
+  <img
+    src="https://i.pinimg.com/originals/88/d3/c8/88d3c815f5ffbfd4ab1b4d8f7d977385.jpg"
+    alt=""
+    height="400"
+    style="object-fit: cover; object-position: top"
+  />
 </div>
