--- a/src/app/features/shop/sidebar-shop/sidebar-shop.component.html
+++ b/src/app/features/shop/sidebar-shop/sidebar-shop.component.html
@@ -1,24 +1,25 @@
 <div class="custom-sidebar-css">
+  <!-- Section for filtering by category -->
   <section class="mb-3">
-    <h1 style="font-family: 'Roboto'" class="h5 pb-4">DANH MỤC SẢN PHẨM</h1>
-    <select
-      style="font-family: 'Roboto'"
-      class="form-select"
-      aria-label="Default select example"
-      (change)="onCategoryChange($event)"
-      [value]="selectedCategory"
-    >
-      <option value="all">Tất cả</option>
-      <option *ngFor="let category of uniqueTypes" [value]="category.name">
-        {{ category.name }} ({{ category.quantity }})
-      </option>
-    </select>
+    <h1 style="font-family: 'Roboto'" class="h5 pb-4">LỌC THEO DANH MỤC</h1>
+    <div class="form-check" *ngFor="let category of categories">
+      <input class="form-check-input" type="checkbox" [value]="category.id" />
+      <label style="font-family: 'Roboto'" class="form-check-label">
+        {{ category.name }}
+      </label>
+    </div>
   </section>
 
-  <section class="mb-3">
+  <!-- Section for filtering by price -->
+  <!-- <section class="mb-3">
     <h1 style="font-family: 'Roboto'" class="h5 pb-4">LỌC THEO GIÁ</h1>
     <div class="card flex justify-content-center">
-      <p-slider [(ngModel)]="rangeValues" [range]="true" styleClass="w-14rem">
+      <p-slider
+        [(ngModel)]="priceRange"
+        [min]="minPrice"
+        [max]="maxPrice"
+        [range]="true"
+      >
         <ng-template let-rangeValues>
           <div class="d-flex justify-content-between">
             <span>{{ rangeValues[0] }}</span>
@@ -27,62 +28,36 @@
         </ng-template>
       </p-slider>
     </div>
-  </section>
+  </section> -->
 
-  <section class="mb-3">
-    <h1 style="font-family: 'Roboto'" class="h5 pb-4">LỌC THEO MÀU SẮC</h1>
-    <div class="form-check" *ngFor="let color of uniqueColors">
-      <input
-        class="form-check-input"
-        type="checkbox"
-        [value]="color.name"
-        id="color-{{ color.name }}"
-        (change)="onColorChange($event)"
-        [checked]="selectedColors.includes(color.name)"
-      />
-      <label
-        style="font-family: 'Roboto'"
-        class="form-check-label"
-        [for]="'color-' + color.name"
-      >
-        {{ color.name }}
-      </label>
-    </div>
-  </section>
-
+  <!-- Section for filtering by brand -->
   <section class="mb-3">
     <h1 style="font-family: 'Roboto'" class="h5 pb-4">LỌC THEO THƯƠNG HIỆU</h1>
     <div class="form-check" *ngFor="let brand of brands">
-      <input
-        class="form-check-input"
-        type="checkbox"
-        value=""
-        id="flexCheckDefault"
-      />
-      <label
-        style="font-family: 'Roboto'"
-        class="form-check-label"
-        for="flexCheckDefault"
-      >
+      <input class="form-check-input" type="checkbox" [value]="brand.id" />
+      <label style="font-family: 'Roboto'" class="form-check-label">
         {{ brand.name }}
       </label>
     </div>
   </section>
 
+  <!-- Section for filtering by color -->
   <section class="mb-3">
-    <h1 style="font-family: 'Roboto'" class="h5 pb-4">LỌC THEO SIZE</h1>
+    <h1 style="font-family: 'Roboto'" class="h5 pb-4">LỌC THEO MÀU SẮC</h1>
+    <div class="form-check" *ngFor="let color of colors">
+      <input class="form-check-input" type="checkbox" [value]="color.id" />
+      <label style="font-family: 'Roboto'" class="form-check-label">
+        {{ color.name }}
+      </label>
+    </div>
+  </section>
+
+  <!-- Section for filtering by size -->
+  <section class="mb-3">
+    <h1 style="font-family: 'Roboto'" class="h5 pb-4">LỌC THEO KÍCH THƯỚC</h1>
     <div class="form-check" *ngFor="let size of sizes">
-      <input
-        class="form-check-input"
-        type="checkbox"
-        value=""
-        id="flexCheckDefault"
-      />
-      <label
-        style="font-family: 'Roboto'"
-        class="form-check-label"
-        for="flexCheckDefault"
-      >
+      <input class="form-check-input" type="checkbox" [value]="size.id" />
+      <label style="font-family: 'Roboto'" class="form-check-label">
         {{ size.name }}
       </label>
     </div>
