--- a/src/app/features/shop/product-details/product-details.component.html
+++ b/src/app/features/shop/product-details/product-details.component.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-lg-7 mt-5">
         <app-image-slider
-          [images]="getProductVariationList(product)"
+          [images]="variationList"
         ></app-image-slider>
       </div>
       <!-- col end -->
@@ -13,8 +13,8 @@
         <div class="card">
           <div class="card-body">
             <h1 class="h2">{{ product?.name }}</h1>
-            <p>Thương hiệu: {{ getBrandName(product) }}</p>
-            <p>Xuất xứ: {{ getNationName(product) }}</p>
+            <p>Thương hiệu: {{product?.brand?.name}}</p>
+            <p>Xuất xứ: {{product?.nation?.name}}</p>
             <span class="d-flex" *ngIf="getVariationBySize(selectedSizeId)">
               Giá bán:
               <p
@@ -67,26 +67,32 @@
             <div
               class="d-flex mt-3"
               *ngIf="
-                getVariationBySizeAndColor(selectedSizeId, selectedColorId)
+                getVariationBySizeAndColor()
               "
             >
               <p class="me-2">Còn lại:</p>
-              <p style="color: green; font-weight: 700">
+              <p style="color: green; font-weight: 700" *ngIf="getVariationBySizeAndColor()?.quantity !== 0">
                 {{
-                  getVariationBySizeAndColor(selectedSizeId, selectedColorId)
+                  getVariationBySizeAndColor()
                     ?.quantity
                 }}
+              </p>
+              <p style="color: brown;font-style: italic;" *ngIf="getVariationBySizeAndColor()?.quantity === 0">
+                Hết hàng. Hãy thử chọn size khác hoặc màu khác!
               </p>
             </div>
             <div
               class="d-flex mt-3"
               *ngIf="
-                !getVariationBySizeAndColor(selectedSizeId, selectedColorId)
+                !getVariationBySizeAndColor()
               "
             >
               <p class="me-2">Còn lại:</p>
-              <p style="color: green; font-weight: 700">
+              <p style="color: green; font-weight: 700" *ngIf="product?.productVariations?.[0]?.quantity !== 0">
                 {{product?.productVariations?.[0]?.quantity}}
+              </p>
+              <p style="color: brown;font-style: italic;" *ngIf="getVariationBySizeAndColor()?.quantity === 0">
+                Hãy chọn size khác hoặc màu sắc!
               </p>
             </div>
             <div class="d-flex flex-column">
@@ -235,6 +241,29 @@
                 Thêm vào giỏ hàng
               </button> -->
               <button
+              *ngIf="
+                !getVariationBySizeAndColor() || getVariationBySizeAndColor()?.quantity === 0
+              "
+                type="button"
+                style="background-color: black"
+                data-mdb-button-init
+                data-mdb-ripple-init
+                class="btn btn-dark btn-add-to-cart"
+                (click)="
+                  handleCartBtnClicked_v2(
+                    product,
+                    selectedSizeId,
+                    selectedColorId
+                  )
+                "
+                disabled
+              >
+                Thêm vào giỏ hàng
+              </button>
+              <button
+              *ngIf="
+                getVariationBySizeAndColor() && getVariationBySizeAndColor()?.quantity !== 0
+              "
                 type="button"
                 style="background-color: black"
                 data-mdb-button-init
@@ -251,6 +280,22 @@
                 Thêm vào giỏ hàng
               </button>
               <button
+              *ngIf="
+                !getVariationBySizeAndColor() || getVariationBySizeAndColor()?.quantity === 0
+              "
+                type="button"
+                style="background-color: black"
+                data-mdb-button-init
+                data-mdb-ripple-init
+                class="btn btn-dark ms-3 btn-add-buy-now"
+                disabled
+              >
+                Mua ngay
+              </button>
+              <button
+              *ngIf="
+                getVariationBySizeAndColor() && getVariationBySizeAndColor()?.quantity !== 0
+              "
                 type="button"
                 style="background-color: black"
                 data-mdb-button-init
