--- a/src/app/features/shop/special-item-shop/special-item-shop.component.html
+++ b/src/app/features/shop/special-item-shop/special-item-shop.component.html
@@ -1,18 +1,18 @@
 <p-toast />
 <div class="card card-custom">
-  <!-- <div class="row no-gutters">
+  <div class="row no-gutters">
     <div class="col-md-3 img-container">
       <img
-        src="../../../../assets/images/data-test/{{ items[5].image[0].value }}"
+        [src]="product?.productVariations?.[0]?.pic"
         alt="Placeholder Image"
         height="200"
       />
     </div>
     <div class="col-md-9 d-flex align-items-center mt-3">
       <div>
-        <p style="font-family: 'Roboto'">{{ items[5].name }}</p>
-        <p style="font-family: 'Roboto'">Mô tả: {{ items[5].des }}</p>
-        <div class="d-flex">
+        <p style="font-family: 'Roboto'">{{ product?.name }}</p>
+        <p style="font-family: 'Roboto'">Mô tả: {{ product?.productVariations?.[0]?.desc }}</p>
+        <!-- <div class="d-flex">
           <p style="font-family: 'Roboto'">Màu sắc:</p>
           <div class="d-flex ms-3" *ngFor="let color of items[5].color">
             <div
@@ -26,28 +26,28 @@
               [style.backgroundColor]="color.value"
             ></div>
           </div>
-        </div>
+        </div> -->
         <div
           class="d-flex align-items-center pb-2 mb-1"
           style="font-family: 'Roboto'"
         >
           <button
-            (click)="handleCartBtnClicked()"
             type="button"
             data-mdb-button-init
             data-mdb-ripple-init
             class="btn btn-dark btn-add-to-cart"
+            [routerLink]="['/shop/product/details', product?.id]"
           >
             Thêm vào giỏ hàng
           </button>
-          <button
+          <!-- <button
             type="button"
             data-mdb-button-init
             data-mdb-ripple-init
             class="btn btn-dark ms-3"
           >
             Mua ngay
-          </button>
+          </button> -->
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@
     alt=""
     width="150"
     style="position: absolute; right: 0; transform: rotate(45deg)"
-  /> -->
+  /> 
 
   <!-- TEST HIỂN THỊ NGAY SAU KHI NHẤN THÊM VÀO GIỎ HÀNG -->
 
@@ -78,10 +78,10 @@
       </div> -->
 
   <!-- TEST HIỂN THỊ NGAY SAU KHI NHẤN THÊM VÀO GIỎ HÀNG -->
-  <img
+  <!-- <img
     src="https://i.pinimg.com/originals/88/d3/c8/88d3c815f5ffbfd4ab1b4d8f7d977385.jpg"
     alt=""
     height="400"
     style="object-fit: cover; object-position: top"
-  />
+  /> -->
 </div>
