--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -8,8 +8,9 @@
   <div
     class="col-md-4 col-lg-3 mb-4 item-container"
     *ngFor="
-      let product of (products$ | async) || []
-        | paginate : { itemsPerPage: 8, currentPage: page }
+      let product of (displayedProducts.length
+        ? displayedProducts
+        : products) || [] | paginate : { itemsPerPage: 8, currentPage: page }
     "
   >
     <div class="card custom-css-item" style="border-radius: 15px">
@@ -73,6 +74,11 @@
             {{ product.productVariations?.[0]?.price | currency : "VND" : "symbol" }}
             <span class="badge bg-danger"
               >{{ product.productVariations?.[0]?.discount | number : "1.0-2"
+
+
+
+
+
 
 
 
