--- a/src/app/features/admin/manage-country/manage-country.component.html
+++ b/src/app/features/admin/manage-country/manage-country.component.html
@@ -21,10 +21,10 @@
                         </ng-template>
                         <ng-template pTemplate="header">
                             <tr>
-                                <th>ID</th>
-                                <th>Tên Quốc Gia</th>
-                                <th>Trạng Thái</th>
-                                <th></th>
+                                <th style="width:10%">ID</th>
+                                <th style="width:50%">Tên Quốc Gia</th>
+                                <th style="width:20%">Trạng Thái</th>
+                                <th style="width:20%"></th>
                             </tr>
                         </ng-template>
                         <ng-template pTemplate="body" let-nation let-editing="editing" let-ri="rowIndex">
