--- a/src/app/features/admin/manage-size/manage-size.component.html
+++ b/src/app/features/admin/manage-size/manage-size.component.html
@@ -21,11 +21,11 @@
                         </ng-template>
                         <ng-template pTemplate="header">
                             <tr>
-                                <th>ID</th>
-                                <th>Tên Kích Thước</th>
-                                <th>Mô Tả</th>
-                                <th>Trạng Thái</th>
-                                <th></th>
+                                <th style="width:10%">ID</th>
+                                <th style="width:20%">Tên Kích Thước</th>
+                                <th style="width:40%">Mô Tả</th>
+                                <th style="width:10%">Trạng Thái</th>
+                                <th style="width:20%"></th>
                             </tr>
                         </ng-template>
                         <ng-template pTemplate="body" let-size let-editing="editing" let-ri="rowIndex">
