--- a/src/app/features/admin/manage-color/manage-color.component.html
+++ b/src/app/features/admin/manage-color/manage-color.component.html
@@ -21,10 +21,10 @@
                         </ng-template>
                         <ng-template pTemplate="header">
                             <tr>
-                                <th>ID</th>
-                                <th>Tên Màu</th>
-                                <th>Trạng Thái</th>
-                                <th></th>
+                                <th style="width:10%">ID</th>
+                                <th style="width:50%">Tên Màu</th>
+                                <th style="width:20%">Trạng Thái</th>
+                                <th style="width:20%"></th>
                             </tr>
                         </ng-template>
                         <ng-template pTemplate="body" let-color let-editing="editing" let-ri="rowIndex">
